// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dependents component can toggle dependents assets: dependents list 1`] = `
Array [
  <li
    class="items-center p-2 rounded-md gap-x-2 bg-black-300"
  >
    <div
      class="flex items-center gap-x-2"
    >
      <div
        aria-label="LowVoltageElectricitySubstationComplex"
        class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1bc90xp-MuiAvatar-root"
      >
        <i
          class="fa-solid fa-utility-pole"
          title="LowVoltageElectricitySubstationComplex-icon"
        />
      </div>
      <div>
        <h4>
          Shalfleet 33kV / 11kV Substation
        </h4>
        <p
          class="text-sm uppercase"
        >
          low voltage electricity substation complex
        </p>
        <p
          class="text-sm"
        >
          E008
        </p>
      </div>
    </div>
    <p
      class="text-sm whitespace-nowrap"
    >
      Criticality: 
      38
    </p>
    <p
      class="text-sm whitespace-nowrap"
    >
      Connection Strength: 
      3
    </p>
  </li>,
  <li
    class="items-center p-2 rounded-md gap-x-2 bg-black-300"
  >
    <div
      class="flex items-center gap-x-2"
    >
      <div
        aria-label="LowVoltageElectricitySubstationComplex"
        class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1bc90xp-MuiAvatar-root"
      >
        <i
          class="fa-solid fa-utility-pole"
          title="LowVoltageElectricitySubstationComplex-icon"
        />
      </div>
      <div>
        <h4>
          East Cowes 33kv /11kV Substation
        </h4>
        <p
          class="text-sm uppercase"
        >
          low voltage electricity substation complex
        </p>
        <p
          class="text-sm"
        >
          E002
        </p>
      </div>
    </div>
    <p
      class="text-sm whitespace-nowrap"
    >
      Criticality: 
      41
    </p>
    <p
      class="text-sm whitespace-nowrap"
    >
      Connection Strength: 
      3
    </p>
  </li>,
  <li
    class="items-center p-2 rounded-md gap-x-2 bg-black-300"
  >
    <div
      class="flex items-center gap-x-2"
    >
      <div
        aria-label="LowVoltageElectricitySubstationComplex"
        class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1bc90xp-MuiAvatar-root"
      >
        <i
          class="fa-solid fa-utility-pole"
          title="LowVoltageElectricitySubstationComplex-icon"
        />
      </div>
      <div>
        <h4>
          Ventnor 33kV / 11kV Substation
        </h4>
        <p
          class="text-sm uppercase"
        >
          low voltage electricity substation complex
        </p>
        <p
          class="text-sm"
        >
          E012
        </p>
      </div>
    </div>
    <p
      class="text-sm whitespace-nowrap"
    >
      Criticality: 
      84
    </p>
    <p
      class="text-sm whitespace-nowrap"
    >
      Connection Strength: 
      3
    </p>
  </li>,
  <li
    class="items-center p-2 rounded-md gap-x-2 bg-black-300"
  >
    <div
      class="flex items-center gap-x-2"
    >
      <div
        aria-label="OilFiredPowerGenerationComplex"
        class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1bc90xp-MuiAvatar-root"
      >
        <i
          class="fa-regular fa-bolt-lightning"
          title="OilFiredPowerGenerationComplex-icon"
        />
      </div>
      <div>
        <h4>
          East Cowes Power Station
        </h4>
        <p
          class="text-sm uppercase"
        >
          oil fired power generation complex
        </p>
        <p
          class="text-sm"
        >
          E001
        </p>
      </div>
    </div>
    <p
      class="text-sm whitespace-nowrap"
    >
      Criticality: 
      3
    </p>
    <p
      class="text-sm whitespace-nowrap"
    >
      Connection Strength: 
      3
    </p>
  </li>,
]
`;

exports[`Dependents component renders error message when one or more dependents returns an error: dependents with error(s) 1`] = `
Array [
  <li
    class="items-center p-2 rounded-md gap-x-2 bg-black-300"
  >
    <div
      class="flex items-center gap-x-2"
    >
      <div
        aria-label="LowVoltageElectricitySubstationComplex"
        class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1bc90xp-MuiAvatar-root"
      >
        <i
          class="fa-solid fa-utility-pole"
          title="LowVoltageElectricitySubstationComplex-icon"
        />
      </div>
      <div>
        <h4>
          Shalfleet 33kV / 11kV Substation
        </h4>
        <p
          class="text-sm uppercase"
        >
          low voltage electricity substation complex
        </p>
        <p
          class="text-sm"
        >
          E008
        </p>
      </div>
    </div>
    <p
      class="text-sm whitespace-nowrap"
    >
      Criticality: 
      38
    </p>
    <p
      class="text-sm whitespace-nowrap"
    >
      Connection Strength: 
      3
    </p>
  </li>,
  <li
    class="items-center p-2 rounded-md gap-x-2 bg-black-300"
  >
    <div
      class="flex items-center gap-x-2"
    >
      <div
        aria-label="LowVoltageElectricitySubstationComplex"
        class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1bc90xp-MuiAvatar-root"
      >
        <i
          class="fa-solid fa-utility-pole"
          title="LowVoltageElectricitySubstationComplex-icon"
        />
      </div>
      <div>
        <h4>
          East Cowes 33kv /11kV Substation
        </h4>
        <p
          class="text-sm uppercase"
        >
          low voltage electricity substation complex
        </p>
        <p
          class="text-sm"
        >
          E002
        </p>
      </div>
    </div>
    <p
      class="text-sm whitespace-nowrap"
    >
      Criticality: 
      41
    </p>
    <p
      class="text-sm whitespace-nowrap"
    >
      Connection Strength: 
      3
    </p>
  </li>,
  <li
    class="items-center p-2 rounded-md gap-x-2 bg-black-300"
  >
    <div
      class="flex items-center gap-x-2"
    >
      <div
        aria-label="LowVoltageElectricitySubstationComplex"
        class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1bc90xp-MuiAvatar-root"
      >
        <i
          class="fa-solid fa-utility-pole"
          title="LowVoltageElectricitySubstationComplex-icon"
        />
      </div>
      <div>
        <h4>
          Ventnor 33kV / 11kV Substation
        </h4>
        <p
          class="text-sm uppercase"
        >
          low voltage electricity substation complex
        </p>
        <p
          class="text-sm"
        >
          E012
        </p>
      </div>
    </div>
    <p
      class="text-sm whitespace-nowrap"
    >
      Criticality: 
      84
    </p>
    <p
      class="text-sm whitespace-nowrap"
    >
      Connection Strength: 
      3
    </p>
  </li>,
  <li
    class="p-2 bg-red-900 rounded-md"
  >
    Failed to retrieve asset information for https://www.iow.gov.uk/DigitalTwin#E001
  </li>,
]
`;
